Changed the name of the variables

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div id="book"></div>
     <script>
-        let years = 20;
-        let building = {tractire: '«Адмирал Бенбоу»', type: 'морской'};
-        let person = ['Сквайр Трелони','доктор Ливси'];
-        let personList = person.join(', ');
-        let when = 'вчера';
+        let currentYear = 20;
+        let revengeAction = {tractire: '«Адмирал Бенбоу»'};
+        let characters = ['Сквайр Трелони','доктор Ливси'];
+        let charactersList = characters.join(', ');
+        let eventTime = 'вчера';
         let text = `
-        ${personList} и другие джентльмены попросили меня написать все, что я знаю об Острове Сокровищ. Им хочется, чтобы я рассказал всю историю, с самого начала до конца, не скрывая никаких подробностей, кроме географического положения острова. Указывать, где лежит этот остров, в настоящее время еще невозможно, так как и теперь там хранятся сокровища, которых мы не вывезли. И вот в нынешнем, ${years} ... году я берусь за перо и мысленно возвращаюсь к тому времени, когда у моего отца был трактир        ${building.tractire} и в этом трактире поселился старый загорелый моряк с сабельным шрамом на щеке. Я помню, словно это было ${when}, как, тяжело ступая, он дотащился до наших дверей, а его ${building.type} сундук везли за ним на тачке.
+        ${charactersList} и другие джентльмены попросили меня написать все, что я знаю об Острове Сокровищ. Им хочется, чтобы я рассказал всю историю, с самого начала до конца, не скрывая никаких подробностей, кроме географического положения острова. Указывать, где лежит этот остров, в настоящее время еще невозможно, так как и теперь там хранятся сокровища, которых мы не вывезли. И вот в нынешнем, ${currentYear} ... году я берусь за перо и мысленно возвращаюсь к тому времени, когда у моего отца был трактир ${revengeAction.tractire} и в этом трактире поселился старый загорелый моряк с сабельным шрамом на щеке. Я помню, словно это было ${eventTime}, как, тяжело ступая, он дотащился до наших дверей, а его морской сундук везли за ним на тачке.
         `
         document.getElementById('book').innerHTML = text;
     </script>
