Restored the orginal code

--- a/test/index.html
+++ b/test/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <script>
-        // function render() {
+        function render() {
             
             let salary = document.getElementById('salary').value;
 
@@ -87,7 +87,7 @@
             //     }
             // }
             // document.getElementById('result').innerHTML = text;
-        // };
+        };
     </script>
     <div class="wrapper">
         <div class="content_section">
